LinkAnnotationInspector: add a "label" field
This field will allow the link text to be edited inside the inspector. If left
empty, the current behavior of generating link text from the href will be
followed. If the current value of the label contains anything which isn't
text, the input will be disabled and its value ignored on teardown.

Bug: T55973
Change-Id: Ic5fbbf3629e92d933fda61969615ff5262437e07

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -98,6 +98,8 @@
 	"visualeditor-languageinspector-widget-label-direction": "Direction",
 	"visualeditor-languageinspector-widget-label-langcode": "Language code",
 	"visualeditor-languageinspector-widget-label-language": "Language",
+	"visualeditor-linkinspector-label": "Label",
+	"visualeditor-linkinspector-target": "Target",
 	"visualeditor-linkinspector-title": "Link",
 	"visualeditor-listbutton-bullet-tooltip": "Bullet list",
 	"visualeditor-listbutton-number-tooltip": "Numbered list",
