--- a/i18n/en.json
+++ b/i18n/en.json
@@ -98,6 +98,8 @@
 	"visualeditor-languageinspector-widget-label-direction": "Direction",
 	"visualeditor-languageinspector-widget-label-langcode": "Language code",
 	"visualeditor-languageinspector-widget-label-language": "Language",
+	"visualeditor-linkinspector-label": "Label",
+	"visualeditor-linkinspector-link": "Link",
 	"visualeditor-linkinspector-title": "Link",
 	"visualeditor-listbutton-bullet-tooltip": "Bullet list",
 	"visualeditor-listbutton-number-tooltip": "Numbered list",
