Explain that Escape/Ctrl+Enter can be used to cancel/confirm a dialog
These two new shortcuts (Cmd+Enter for Mac) will now appear in the
keyboard shortcuts dialog. This is built-in OOjs UI functionality,
we're only documenting that it exists.

Change-Id: I93f50e325f993d82a821bf02f5e7f56fe1b9de62

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -39,6 +39,8 @@
 	"visualeditor-clipboard-cut": "Cut",
 	"visualeditor-clipboard-paste": "Paste",
 	"visualeditor-clipboard-paste-special": "Paste as plain text",
+	"visualeditor-command-dialog-cancel": "Cancel a popup dialog",
+	"visualeditor-command-dialog-confirm": "Confirm a popup dialog",
 	"visualeditor-commentinspector-edit": "Edit comment",
 	"visualeditor-commentinspector-title": "Comment",
 	"visualeditor-commentinspector-tooltip": "Comment",
