--- a/i18n/en.json
+++ b/i18n/en.json
@@ -39,6 +39,8 @@
 	"visualeditor-clipboard-cut": "Cut",
 	"visualeditor-clipboard-paste": "Paste",
 	"visualeditor-clipboard-paste-special": "Paste as plain text",
+	"visualeditor-command-dialog-cancel": "Cancel change",
+	"visualeditor-command-dialog-confirm": "Confirm change",
 	"visualeditor-commentinspector-edit": "Edit comment",
 	"visualeditor-commentinspector-title": "Comment",
 	"visualeditor-commentinspector-tooltip": "Comment",
